--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,8 +96,8 @@ endif()
 message(STATUS "CMAKE_TOOLCHAIN_FILE = ${CMAKE_TOOLCHAIN_FILE}")
 
 project(ax_pipeline)
-set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Ofast -Wall -s -fPIC -Wno-unused-function -Wno-unused-label")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -Wall -s -fPIC -Wno-unused-function -Wno-unused-label")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Ofast -Wall -g -fPIC -Wno-unused-function -Wno-unused-label")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -Wall -g -fPIC -Wno-unused-function -Wno-unused-label")
 
 add_subdirectory(third-party/RTSP)
 add_subdirectory(third-party/RtspServer)    
@@ -125,12 +125,12 @@ if(AXERA_TARGET_CHIP MATCHES "AX650")
     
     add_subdirectory(examples/common/common_pipeline)
     add_subdirectory(examples/libaxdl)
-    add_subdirectory(examples/sample_demux_ivps_npu_rtsp)
-    add_subdirectory(examples/sample_multi_demux_ivps_npu_hdmi_vo)
+    # add_subdirectory(examples/sample_demux_ivps_npu_rtsp)
+    # add_subdirectory(examples/sample_multi_demux_ivps_npu_hdmi_vo)
     add_subdirectory(examples/sample_multi_demux_ivps_npu_multi_rtsp)
-    add_subdirectory(examples/sample_multi_demux_ivps_npu_multi_rtsp_hdmi_vo)
-    add_subdirectory(examples/sample_demux_ivps_npu_rtsp_hdmi_vo)
-    add_subdirectory(examples/sample_demux_ivps_npu_hdmi_vo)
+    # add_subdirectory(examples/sample_multi_demux_ivps_npu_multi_rtsp_hdmi_vo)
+    # add_subdirectory(examples/sample_demux_ivps_npu_rtsp_hdmi_vo)
+    # add_subdirectory(examples/sample_demux_ivps_npu_hdmi_vo)
     file(GLOB SAMPLE_RUN_JOINT_CONFIG_FILES "${CMAKE_SOURCE_DIR}/examples/libaxdl/config/ax650/*")
     install(FILES ${SAMPLE_RUN_JOINT_CONFIG_FILES} DESTINATION bin/config)
 elseif(AXERA_TARGET_CHIP MATCHES "AX620E")
